kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: weather-ops
  labels:
    name: weather-ops
    app: weather-ops
